[package]
name = "media-server-diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-next = "5"
clap = {version = "3", features = ['derive']}
walkdir = "2"
rayon = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
